# smartypants

./: README.md  datapack.js  index.html  lookup.js  script.js  spritepack.js  style.css
.github/workflows/: main.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/encodings/: encoding_jp.json
src-tauri/icons/: icon.icns
src-tauri/resources/: config.ini  encoding_en.json  encoding_jp.json  encoding_latin.json
src-tauri/resources/encodings/: encoding_en.json  encoding_latin.json
src-tauri/resources/themes/: Curiosities.ini  Egg Dealer.ini  High Contrast.ini  Ice Cream Spice.ini  Ink Pink.ini  Oil.ini  Puffball.ini  Robots Are Cool.ini  Stormy.ini  Vintage Voltage.ini  Yamazaki.ini
src-tauri/src/: config.rs  data_pack.rs  data_view.rs  export.rs  file.rs  firmware.rs  import.rs  main.rs  smacard.rs  sprite_pack.rs  text.rs
src-tauri/src/data_pack/: character.rs  frame.rs  graphics_node.rs  item.rs  particle_emitter.rs  scene.rs  table1.rs  table9.rs  tamastring.rs
src-tauri/src/sprite_pack/: image_def.rs  palette.rs  sprite.rs
ui/: index.html
ui/script/: about-dialog.js  choose-encoding-dialog.js  edit-character-dialog.js  edit-dialog.js  edit-encoding-dialog.js  edit-frame-dialog.js  edit-header-dialog.js  edit-item-dialog.js  edit-menustring-dialog.js  edit-scenelayer-dialog.js  edit-sprite-dialog.js  edit-tamastring-dialog.js  encoding-dialog.js  html.js  main.js  section-animations.js  section-characters.js  section-frames.js  section-headers.js  section-items.js  section-menu-strings.js  section-palettes.js  section-particle-emitters.js  section-scenes.js  section-sprites.js  section-strings.js  section-tamastrings.js
ui/style/: style.css
